_includes/style.css
/**
 * This is itself (kind of) an easter egg. Happy hunting!
 */
.easter-egg::before {
    content: "
        You'll know if you found an Easter egg because I'll have
        explicitly denoted it in a textual note, similar to this.
    ";
}
.easter-egg::after {
    content: "\01F95A\1F575"; /* Generates this sequence: 🥚🕵️ */
    display: inline-block;
    margin-left: .5em;
}

/* A single custom, quick 'n' dirty font hack. */
.icon.fa-xmpp::before {
    mask: url("{% link images/logo.xmpp.currentColor.svg %}") center/contain no-repeat;
}

.data-table {
    border-collapse: separate;
}
.data-table caption {
    padding: 2em;
    text-align: center;
}
.data-table th,
.data-table td {
    vertical-align: middle;
    text-align: center;
}
.data-table tbody th,
.data-table tbody td {
    border: 1px dotted white;
}
.data-table tr:nth-child(2n + 1) {
    background-color: rgba(5,5,5,.85);
}

/**
 * @group Breadcrumb navigation.
 */
#bottom-breadcrumb-nav {
    text-align: center;
}
.breadcrumb-nav {
    font-size: small;

    ul {
        margin: 0;
        padding: 0;
    }

    li {
        display: inline;
        margin: 0;
        padding: 0;

        &:not(:last-child)::after {
            content: "\2192";
            padding: 0 .25em;
        }
    }

}

/**
 * @group Newsletter subscription.
 */
[data-form="5cffbafc-3299-11f1-bb40-5906a544377b"] .emailoctopus-form input#field_0 {
    height: 3em;
}
[data-form="5cffbafc-3299-11f1-bb40-5906a544377b"] .mastfoot {
    display: none !important;
}

